k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brewer
  labels:
    app.kubernetes.io/part-of: brewer
