k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brewer
  namespace: brewer
  labels:
    app.kubernetes.io/name: brewer
    app.kubernetes.io/part-of: brewer
spec:
  selector:
    app: brewer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
