k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: brewer
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: brewer
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  # ClusterIP: banco não precisa ser exposto fora do cluster
  type: ClusterIP
